get word selection working

--- a/templates/text-tree.html
+++ b/templates/text-tree.html
@@ -19,6 +19,7 @@
         <script src="{% static "js/add-child-words.js" %}"></script>
         {{ toggle_snippet }}
 
+        <link rel="stylesheet" type="text/css" href="{% static "styles/word-selection.css" %}">
         </script>
     </body>
 </html>
