--- a/templates/orihime/tinymce-text-view.html
+++ b/templates/orihime/tinymce-text-view.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>{{ flatpage.title }}</title>
 <script src="{% static "js/tinymce/js/tinymce/tinymce.min.js" %}" referrerpolicy="origin"></script>
 <script>tinymce.init({entity_encoding: "raw", selector:'textarea', plugins: 'code'/* , toolbar: 'code' */, menubar: 'tools'});</script>
