--- a/templates/orihime/text-tree.html
+++ b/templates/orihime/text-tree.html
@@ -1,6 +1,7 @@
 {% load static %}
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="{% static "styles/application.css" %}">
         <link rel="stylesheet" type="text/css" href="{% static "styles/add-button.css" %}">
         <!-- <link rel="stylesheet" type="text/css" href="static/styles/orihime-colors.css"> -->
