--- a/templates/django_registration/registration_form.html
+++ b/templates/django_registration/registration_form.html
@@ -1,5 +1,9 @@
+{% extends "orihime/base.html" %}
+
+{% block body %}
 <form action="/accounts/register/" method="post">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     <input type="submit" value="Submit">
 </form>
+{% endblock %}
