--- a/templates/orihime/text-tree.html
+++ b/templates/orihime/text-tree.html
@@ -1,26 +1,25 @@
-{% load static %}
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="{% static "styles/application.css" %}">
-        <link rel="stylesheet" type="text/css" href="{% static "styles/add-button.css" %}">
-        <!-- <link rel="stylesheet" type="text/css" href="static/styles/orihime-colors.css"> -->
-    </head>
-    <body> 
+{% extends "orihime/base.html" %}
 
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static "styles/application.css" %}">
+<link rel="stylesheet" type="text/css" href="{% static "styles/add-button.css" %}">
+<!-- <link rel="stylesheet" type="text/css" href="static/styles/orihime-colors.css"> -->
+{% endblock %}
+
+{% block body %}
         <div id="orihime-text-tree-container">
-{% autoescape off %}
-            {{ ANKI_Text }}
-{% endautoescape %}
+            {% autoescape off %}
+            {{ text_tree }}
+            {% endautoescape %}
         </div>
 
         <div id="add-button">+</div>
 
         <script src="{% static "js/expand-child-words.js" %}"></script>
         <script src="{% static "js/add-child-words.js" %}"></script>
-        {{ toggle_snippet }}
 
         <link rel="stylesheet" type="text/css" href="{% static "styles/word-selection.css" %}">
         </script>
-    </body>
-</html>
+{% endblock %}
