--- a/templates/orihime/tinymce-text-view.html
+++ b/templates/orihime/tinymce-text-view.html
@@ -3,12 +3,12 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Orihime—―</title>
+<title>Orihime—Add text</title>
 <script src="{% static "js/tinymce/js/tinymce/tinymce.min.js" %}" referrerpolicy="origin"></script>
 <script>tinymce.init({entity_encoding: "raw", selector:'textarea', plugins: 'code'/* , toolbar: 'code' */, menubar: 'tools'});</script>
 </head>
 <body>
-    <form action="/mce-test/" method="post">
+    <form method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Submit">
