--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends "orihime/base.html" %}
 
 {% block body %}
-<form action="/accounts/register/" method="post">
+<form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Submit">
