--- a/templates/orihime/tinymce-text-view.html
+++ b/templates/orihime/tinymce-text-view.html
@@ -1,9 +1,10 @@
 {% load static %}
+{% load i18n %}
 <!DOCTYPE html>
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Orihime—Add text</title>
+<title>{% trans "Orihime—Add text" %}</title>
 <script src="{% static "js/tinymce/js/tinymce/tinymce.min.js" %}" referrerpolicy="origin"></script>
 <script>tinymce.init({entity_encoding: "raw", selector:'textarea', plugins: 'code'/* , toolbar: 'code' */, menubar: 'tools'});</script>
 </head>
@@ -11,7 +12,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit">
+        <input type="submit" value="{% trans "Submit" %}">
     </form>
 </body>
 </html>
