--- a/templates/orihime/text-tree.html
+++ b/templates/orihime/text-tree.html
@@ -17,6 +17,13 @@
 
         <div id="add-button">+</div>
 
+        <div id="backend-selector">
+            <select>
+                <option value="goo"><img src="/static/images/favicon.ico" />Goo</option>
+                <option value="larousse">Larousse</option>
+            </select>
+        </div>
+
         <script src="{% static "js/expand-child-words.js" %}"></script>
         <script src="{% static "js/add-child-words.js" %}"></script>
 
