correctly set source of entries found through backends

--- a/templates/orihime/text-tree.html
+++ b/templates/orihime/text-tree.html
@@ -19,7 +19,7 @@
 
         <div id="backend-selector">
             <select>
-                <option value="goo"><img src="/static/images/favicon.ico" />Goo</option>
+                <option value="goo">goo辞書</option>
                 <option value="larousse">Larousse</option>
             </select>
         </div>
